--- a/styles.css
+++ b/styles.css
@@ -44,3 +44,29 @@ h1 {
   font-weight: bold;
   font-size: 1.5rem;
 }
+
+.topic_header h3 {
+  margin: 0;
+  background-color: #0955a4;
+  padding: 3px 5px;
+  color: white;
+  font-weight: lighter;
+  letter-spacing: 0.5;
+  line-height: 0.9;
+}
+.topic_header p {
+  margin: 0;
+  padding: 13px;
+  background-color: #166cc60a;
+  color: #0955a4;
+  line-height: 1.3;
+  font-size: 17px;
+  border-bottom: 2px solid #0955a4;
+}
+.topic_header h3 b {
+  font-weight: bold;
+  background-color: white;
+  color: #166cc6;
+  padding: 1px 5px;
+  margin-right: 5px;
+}
