--- a/styles.css
+++ b/styles.css
@@ -44,23 +44,27 @@ h1 {
   font-weight: bold;
   font-size: 1.5rem;
 }
-
+.topic_header {
+  margin-top: 15px;
+}
 .topic_header h3 {
   margin: 0;
   background-color: #0955a4;
   padding: 3px 5px;
   color: white;
-  font-weight: lighter;
+  font-weight: 500;
   letter-spacing: 0.5;
   line-height: 0.9;
+  font-size: 17px;
+  padding-bottom: 5px;
 }
 .topic_header p {
   margin: 0;
   padding: 13px;
   background-color: #166cc60a;
   color: #0955a4;
-  line-height: 1.3;
-  font-size: 17px;
+  line-height: 1.5;
+  font-size: 16px;
   border-bottom: 2px solid #0955a4;
 }
 .topic_header h3 b {
@@ -69,4 +73,13 @@ h1 {
   color: #166cc6;
   padding: 1px 5px;
   margin-right: 5px;
+}
+.topic_header div {
+  background-color: #0955a4;
+  color: white;
+  padding-bottom: 4px;
+  font-weight: 500;
+  font-size: 12px;
+  margin-bottom: 25px;
+  padding-left: 15px;
 }
