--- a/styles.css
+++ b/styles.css
@@ -89,8 +89,8 @@ h1 {
   color: #0955a4;
   text-decoration: none;
   padding: 0px 8px;
-  padding-bottom: 3px;
-  margin-top: 33px;
   background-color: white;
   border: 1px solid #0955a4;
+  line-height: 1.45;
+  margin-top: -1px;
 }
