--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,8 @@ h1 {
   line-height: 0.9;
   font-size: 17px;
   padding-bottom: 5px;
+  width: 100%;
+  float: left;
 }
 .topic_header p {
   margin: 0;
@@ -71,8 +73,18 @@ h1 {
   font-weight: bold;
   background-color: white;
   color: #166cc6;
-  padding: 1px 5px;
-  margin-right: 5px;
+  padding: 2px 5px 4px;
+  margin-top: 1px;
+  float: left;
+  width: 20%;
+  text-align: center;
+  min-width: 85px;
+}
+.topic_header h3 span {
+  width: 80%;
+  float: left;
+  padding-left: 5px;
+  line-height: 1.2;
 }
 .topic_header div {
   background-color: #0955a4;
